# trading-platform

./: .coveragerc  .env.example  .gitignore  .importlinter  .pre-commit-config.yaml  .secrets.baseline  Makefile  README.md  pyproject.toml
.generated/: contracts-admin-v2025.1.parser.ts  contracts-admin-v2025.1.ts
.generated/admin-http/v2025.1/: admin-http.contract.ts
.generated/admin_http/: contracts-v2025.1.parser.ts  contracts-v2025.1.ts
.generated/control-plane-http/v2025.1/: admin-http.parser.ts  parser.ts
.generated/core/: json-value.ts
apps/cli/: bootstrap.py  main.py
apps/streamlit/: app.py  bootstrap.py  config_runtime.py  config_runtime_client.py
apps/streamlit/dashboards/: config_readiness.py  dashboard_config_runtime.py  dashboard_config_supervisor.py
apps/streamlit/dashboards/config/: diagnostics_page.py  diagnostics_service.py  diagnostics_view.py  readiness_page.py  readiness_service.py  readiness_view.py
apps/streamlit/dashboards/observability/: diagnostics_page.py  diagnostics_service.py  diagnostics_view.py
apps/streamlit/lib/: obs.py
apps/streamlit/pages/: observability.py  observability_page.py  page_observability_core.py
apps/streamlit/services/: log_reader.py  metrics_reader.py
assurance/architecture/: .importlinter
assurance/quality/: .pre-commit-config.yaml  black.toml  coverage_thresholds.json  isort.cfg  mypy.ini  pytest.ini  ruff.toml
assurance/security/: .secrets.baseline  bandit.yaml
contracts/admin_http/v2025_1/: config_diagnostics.py  health.py  observability_diagnostics.py  registry.py  runtime_metadata.py
contracts/core/: base.py  model.py  validation.py  versioning.py  wire_format.py
contracts/core/types/: json.py
contracts/core/version/: mapping.py  model.py  versioning.py
contracts/generators/: json_schema.py  typescript.py  typescript_enum.py  typescript_parser.py
contracts/generators/json_schema/: generate.py
contracts/generators/shared/: naming.py
contracts/generators/typescript/: core.py  interfaces.py  parsers.py
contracts/surfaces/admin_http/v2025_1/: manifest.py  registry.py
contracts/surfaces/control_plane_http/v2025_1/: manifest.py
docs/api/admin_http/v2025.1/: AdminEndpoints.schema.json  AdminHttpDescriptor.schema.json  ApiVersionDescriptor.schema.json  ConfigDiagnosticsResponse.schema.json  ConfigReadyStateSnapshot.schema.json  HealthResponse.schema.json  ObservabilityDiagnosticsResponse.schema.json  RuntimeMetadataResponse.schema.json
docs/api/admin_http/v2025_1/: ConfigDiagnosticsResponse.schema.json  HealthResponse.schema.json  ObservabilityDiagnosticsResponse.schema.json  RuntimeMetadataResponse.schema.json
docs/api/control_plane_http/v2025.1/: ConfigReadyStateSnapshot.schema.json
docs/architecture/: tree.txt
docs/architecture/decisions/: 0001-designate-mt5-as-infrastructure-adapter.md  0002-distribute-tests-by-functional-domain.md  README.md
docs/config/: README.md
docs/observability/: README.md  grafana_dashboard.json  log_schema_v1.json
runtime/: observability_http_server.py  runtime_composer.py  runtime_engine.py  runtime_shutdown.py  runtime_state.py  runtime_system.py
runtime/admin/auth/: auth_port.py  bearer_auth.py
runtime/admin/diagnostics/: config.py  observability.py
runtime/admin/http/: auth_middleware.py  handlers.py  http_forwarding.py  routing.py  server.py
runtime/assembly/: system_factory.py
runtime/bootstrap/: runtime_context.py
runtime/bootstrap/contexts/: config.py  identity.py  observability.py
runtime/composition/: runtime_composer.py  runtime_system.py  system.py
runtime/contracts/: canonical_json.py
runtime/control_plane/: http_forwarding.py  version.py
runtime/control_plane/admin_http/: auth_middleware.py  handlers.py  routing.py  server.py
runtime/control_plane/auth/: auth_port.py  bearer_auth.py
runtime/control_plane/canonicalization/: canonical_json.py
runtime/control_plane/contracts/: system_status.py  version.py
runtime/control_plane/diagnostic_providers/: config_diagnostics_provider.py  config_readiness_provider.py  config_state_diagnostics_provider.py  fsm_diagnostics_provider.py  health_provider.py  observability_diagnostics_provider.py  time_provider_dependency.py
runtime/control_plane/diagnostics/: config.py  observability.py
runtime/control_plane/http/: auth_middleware.py  cors_middleware.py  handlers.py  http_forwarding.py  routing.py  server.py
runtime/control_plane/security/: auth_port.py  bearer_auth.py  models.py
runtime/kernel/: engine.py
runtime/lifecycle/: engine.py  runtime_state_port.py  state_machine.py  system_status_projection.py
runtime/presentation/: config_diagnostics_presenter.py  observability_diagnostics_presenter.py  safety.py
runtime/shutdown/: coordinator.py
runtime/supervisor/adapters/: health_adapter.py  ready_state_adapter.py
runtime/supervisor/http/: handlers.py  routing.py  server.py
scripts/: generate_assurance_report.py  generate_log_schema.py  generate_ts_contracts.py  obs_smoke.py  print_tree.py  verify_coverage.py
scripts/contracts/: generate_json_schema.py  generate_ts_contracts.py  generate_ts_parsers.py
src/quantum/: __main__.py  bootstrap.py
src/quantum/adapters/telemetry/: event_emitter.py  trading_api.py
src/quantum/application/adapters/: mt5_execution_adapter.py
src/quantum/application/broadcast/: executor.py  (+3 more)
src/quantum/contracts/: base_contracts.py  settings_contracts.py
src/quantum/core/: main.py
src/quantum/ui/: _obs.py  obs.py  streamlit_app.py
tests/: conftest.py
tests/e2e/observability/: test_observability_fsync_e2e.py  test_observability_metrics_http_e2e.py  test_observability_otlp_grpc_e2e.py  test_observability_otlp_http_e2e.py  test_observability_pipeline_e2e.py
tests/fixtures/: environment.py  logging.py  observability.py  settings.py  state.py
tests/governance/: test_classification_policy.py  test_fixture_policy.py  test_governance_layer.py  test_naming_policy.py  test_structure_policy.py
tests/support/: factories.py  governance_common.py  logging_utils.py  observability.py  time_utils.py  types.py  wait.py
(+1858 files in other folders)
