# ╭────────────────────────────────────────────────────────────────────────────╮
# │ Project Metadata                                                           │
# ╰────────────────────────────────────────────────────────────────────────────╯
[project]
name = "quantum"
version = "0.1.0"
description = ""
authors = [
    { name = "Matine NASSIRPOUR", email = "matine@nassirpour.org" }
]
license = "Proprietary"
requires-python = ">=3.11,<3.12"
readme = "README.md"
packages = [{ include = "quantum", from = "src" }]


# ╭────────────────────────────────────────────────────────────────────────────╮
# │ Python runtime policy                                                      │
# ╰────────────────────────────────────────────────────────────────────────────╯
[tool.poetry.dependencies]
pydantic = "^2.11.9"
pydantic-settings = "^2.11.0"
opentelemetry-sdk = "^1.37.0"
opentelemetry-exporter-otlp = "^1.37.0"
prometheus-client = "^0.23.1"
streamlit = "^1.50.0"
python-dotenv = "^1.1.1"
metatrader5 = "^5.0.5328"


# ╭────────────────────────────────────────────────────────────────────────────╮
# │ Dev toolchain (QA / security / lint / typing / tests)                      │
# ╰────────────────────────────────────────────────────────────────────────────╯
[tool.poetry.group.dev.dependencies]
pre-commit = "^4.3.0"
detect-secrets = "^1.5.0"
pytest = "^8.4.2"
pytest-cov = "^7.0.0"
mypy = "^1.18.2"
ruff = "^0.13.2"
black = "^25.9.0"
bandit = "^1.8.6"
pip-audit = "^2.9.0"
import-linter = "^2.5"


# ╭────────────────────────────────────────────────────────────────────────────╮
# │ Build System                                                               │
# ╰────────────────────────────────────────────────────────────────────────────╯
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


# ╭────────────────────────────────────────────────────────────────────────────╮
# │ BLACK — Canonical Code Formatter                                           │
# ╰────────────────────────────────────────────────────────────────────────────╯
[tool.black]
line-length = 88
target-version = ["py311"]
skip-string-normalization = false
skip-magic-trailing-comma = false
preview = true


# ╭────────────────────────────────────────────────────────────────────────────╮
# │ ISORT — Canonical Import Organization                                      │
# ╰────────────────────────────────────────────────────────────────────────────╯
[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3

# Trailing commas and parentheses for clarity and consistency
include_trailing_comma = true
use_parentheses = true

# Advanced import control
combine_as_imports = false
force_grid_wrap = 0
ensure_newline_before_comments = true

# Import section hierarchy (matches Clean Architecture layering)
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
known_first_party = ["quantum"]
default_section = "THIRDPARTY"
lines_between_types = 1
case_sensitive = true
atomic = true


# ╭────────────────────────────────────────────────────────────────────────────╮
# │ RUFF — Unified Static Analysis and Linting Engine                          │
# ╰────────────────────────────────────────────────────────────────────────────╯
[tool.ruff]
select = [
    "F",   # Pyflakes: syntax and import errors
    "W",   # PEP 8 warnings (style)
    "B",   # Bugbear: common pitfalls and antipatterns
    "UP",  # Pyupgrade: enforce modern syntax
    "I",   # Import checks (supplemental to Isort)
    "C90"  # Cyclomatic complexity enforcement
]
ignore = ["I001", "I002"]  # Ignore rules delegated to Isort
fix = true
line-length = 88
target-version = "py311"
respect-gitignore = true
format.preview = true

# ------------------------------------------------------------------------------
# RUFF MCCABE — Cyclomatic Complexity Limitation
# ------------------------------------------------------------------------------
[tool.ruff.lint.mccabe]
max-complexity = 8

# ------------------------------------------------------------------------------
# RUFF — Per-Directory Linting Exceptions
# ------------------------------------------------------------------------------
[tool.ruff.lint.per-file-ignores]
# Rule C901 (complexity) only for the core architecture
"tests/**/*.py"   = ["C901"]
"scripts/**/*.py" = ["C901"]
"runtime/**/*.py" = ["C901"]
"apps/**/*.py"    = ["C901"]
"docs/**/*.py"    = ["C901"]

# ╭────────────────────────────────────────────────────────────────────────────╮
# │ Typing (mypy)                                                              │
# ╰────────────────────────────────────────────────────────────────────────────╯
[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
no_implicit_optional = true
show_error_codes = true
ignore_missing_imports = true
pretty = true


# ╭────────────────────────────────────────────────────────────────────────────╮
# │ Testing Configuration (pytest)                                             │
# ╰────────────────────────────────────────────────────────────────────────────╯
[tool.pytest.ini_options]
testpaths = ["tests", "src/quantum"]

addopts = """
    -ra -q --strict-markers --tb=short
    --rootdir=.
    --import-mode=importlib
    --cov=src/quantum
    --cov-report=term-missing
    --cov-report=xml:coverage.xml
    --cov-report=html:htmlcov
    --junitxml=test-results/results.xml
    --disable-warnings
"""
# --cov-fail-under=90

markers = [
    "governance: meta-level tests ensuring internal codebase governance, structure, naming, and fixture policy compliance (non-functional, QA governance layer)",
    "verification: isolated unit-level verification of individual components or functions (pure unit tests; no external dependency or cross-layer interaction)",
    "validation: cross-domain functional validation equivalent to integration tests; verifies interactions and data contracts between application layers and adapters",
    "qualification: system robustness and fault-tolerance tests; validates recovery, failover, and operational stability under stress or fault conditions",
    "certification: formal compliance, traceability, and audit verification; ensures conformity with regulatory, contractual, and documentation requirements",
    "performance: performance and efficiency validation; measures latency, throughput, and resource usage under realistic operational load",
    "system: full end-to-end (E2E) qualification of the complete trading platform; validates behavior across runtime boundaries and external integrations",
]

filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)s] %(name)s: %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"


# ╭────────────────────────────────────────────────────────────────────────────╮
# │ Test Coverage                                                              │
# ╰────────────────────────────────────────────────────────────────────────────╯
[tool.coverage.run]
branch = true
source = ["src/quantum"]
omit = [
    "*/__init__.py",
    "*/tests/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
precision = 2
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "pass",
]

[tool.coverage.html]
directory = "htmlcov"
title = "Quantum Coverage Report"

[tool.coverage.xml]
output = "coverage.xml"


# ╭────────────────────────────────────────────────────────────────────────────╮
# │ Security (Bandit)                                                          │
# ╰────────────────────────────────────────────────────────────────────────────╯
[tool.bandit]
targets = ["src/quantum"]
skips = ["B101"]  # allows the use of 'assert' in tests if necessary
severity = "LOW"
confidence = "HIGH"
