# ╭────────────────────────────────────────────────────────────────────────────╮
# │ Project Metadata                                                           │
# ╰────────────────────────────────────────────────────────────────────────────╯
[project]
name = "quantum"
version = "0.1.0"
description = ""
authors = [
    { name = "Matine NASSIRPOUR", email = "matine@nassirpour.org" }
]
license = "Proprietary"
requires-python = ">=3.11,<3.12"
readme = "README.md"
packages = [{ include = "quantum", from = "src" }]


# ╭────────────────────────────────────────────────────────────────────────────╮
# │ Python runtime policy                                                      │
# ╰────────────────────────────────────────────────────────────────────────────╯
[tool.poetry.dependencies]
pydantic = "^2.11.9"
pydantic-settings = "^2.11.0"
opentelemetry-sdk = "^1.37.0"
opentelemetry-exporter-otlp = "^1.37.0"
prometheus-client = "^0.23.1"
streamlit = "^1.50.0"
python-dotenv = "^1.1.1"
metatrader5 = "^5.0.5328"


# ╭────────────────────────────────────────────────────────────────────────────╮
# │ Dev toolchain (QA / security / lint / typing / tests)                      │
# ╰────────────────────────────────────────────────────────────────────────────╯
[tool.poetry.group.dev.dependencies]
pre-commit = "^4.3.0"
detect-secrets = "^1.5.0"
pytest = "^8.4.2"
pytest-cov = "^7.0.0"
mypy = "^1.18.2"
ruff = "^0.13.2"
black = "^25.9.0"
bandit = "^1.8.6"
pip-audit = "^2.9.0"
import-linter = "^2.5"


# ╭────────────────────────────────────────────────────────────────────────────╮
# │ Build System                                                               │
# ╰────────────────────────────────────────────────────────────────────────────╯
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


# ╭────────────────────────────────────────────────────────────────────────────╮
# │ Test Coverage                                                              │
# ╰────────────────────────────────────────────────────────────────────────────╯
[tool.coverage.run]
branch = true
source = ["src/quantum"]
data_file = "build/coverage/.coverage"
omit = [
    "*/__init__.py",
    "*/tests/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
precision = 2
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "pass",
]

[tool.coverage.html]
directory = "build/coverage/htmlcov"
title = "Quantum Coverage Report"

[tool.coverage.xml]
output = "build/coverage/coverage.xml"

[tool.coverage.json]
output = "build/coverage/coverage.json"
pretty_print = true
