# ╭────────────────────────────────────────────────────────────────────────────╮
# │ Project Metadata                                                           │
# ╰────────────────────────────────────────────────────────────────────────────╯
[project]
name = "quantum"
version = "0.1.0"
description = ""
authors = [
    { name = "Matine NASSIRPOUR", email = "matine@nassirpour.org" }
]
license = "LicenseRef-Proprietary"
requires-python = ">=3.11,<3.12"
readme = "README.md"
packages = [{ include = "quantum", from = "src" }]
dependencies = [
    "pydantic>=2.11.9,<3.0.0",
    "pydantic-settings>=2.11.0,<3.0.0",
    "opentelemetry-sdk>=1.37.0,<2.0.0",
    "opentelemetry-exporter-otlp>=1.37.0,<2.0.0",
    "prometheus-client>=0.23.1,<1.0.0",
    "streamlit>=1.50.0,<2.0.0",
    "python-dotenv>=1.1.1,<2.0.0",
    "metatrader5>=5.0.5328,<6.0.0",
    "aiohttp (>=3.13.2,<4.0.0)",
]


# ╭────────────────────────────────────────────────────────────────────────────╮
# │ Dev toolchain (QA / security / lint / typing / tests)                      │
# ╰────────────────────────────────────────────────────────────────────────────╯
[tool.poetry.group.dev.dependencies]
pre-commit = "^4.3.0"
detect-secrets = "^1.5.0"
pytest = "^8.4.2"
pytest-cov = "^7.0.0"
mypy = "^1.18.2"
ruff = "^0.13.2"
black = "^25.9.0"
bandit = "^1.8.6"
pip-audit = "^2.9.0"
import-linter = "^2.5"
isort = "^7.0.0"


# ╭────────────────────────────────────────────────────────────────────────────╮
# │ Build System                                                               │
# ╰────────────────────────────────────────────────────────────────────────────╯
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


# ╭────────────────────────────────────────────────────────────────────────────╮
# │ Testing Configuration (pytest)                                             │
# ╰────────────────────────────────────────────────────────────────────────────╯
[tool.pytest.ini_options]
testpaths = ["tests", "src/quantum"]

addopts = """
    -ra -q --strict-markers --tb=short
    --rootdir=.
    --import-mode=importlib
    --cov=src/quantum
    --cov-branch
    --cov-report=term-missing
    --cov-report=html:build/coverage/htmlcov
    --cov-report=xml:build/coverage/coverage.xml
    --cov-report=json:build/coverage/coverage.json
    --junitxml=build/test-results/results.xml
    --disable-warnings
"""
# --cov-fail-under=90

markers = [
    "governance: meta-level tests ensuring internal codebase governance, structure, naming, and fixture policy compliance (non-functional, QA governance layer)",
    "verification: isolated unit-level verification of individual components or functions (pure unit tests; no external dependency or cross-layer interaction)",
    "validation: cross-domain functional validation equivalent to integration tests; verifies interactions and data contracts between application layers and adapters",
    "qualification: system robustness and fault-tolerance tests; validates recovery, failover, and operational stability under stress or fault conditions",
    "certification: formal compliance, traceability, and audit verification; ensures conformity with regulatory, contractual, and documentation requirements",
    "performance: performance and efficiency validation; measures latency, throughput, and resource usage under realistic operational load",
    "system: full end-to-end (E2E) qualification of the complete trading platform; validates behavior across runtime boundaries and external integrations",
]

filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)s] %(name)s: %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"


# ╭────────────────────────────────────────────────────────────────────────────╮
# │ Test Coverage                                                              │
# ╰────────────────────────────────────────────────────────────────────────────╯
[tool.coverage.run]
branch = true
source = ["src/quantum"]
data_file = "build/coverage/.coverage"
omit = [
    "*/__init__.py",
    "*/tests/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
precision = 2
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "pass",
]

[tool.coverage.html]
directory = "build/coverage/htmlcov"
title = "Quantum Coverage Report"

[tool.coverage.xml]
output = "build/coverage/coverage.xml"

[tool.coverage.json]
output = "build/coverage/coverage.json"
pretty_print = true
